...
                        .onDisappear {
                            speech.stop()
                        }
                        Spacer() // To align the button to the center
                    }
                    
                    TextField("", text: $typedWord, prompt: Text("Type word").foregroundStyle(.gray))
                        .foregroundColor(.black)
                        .font(.body)
                        .fontWeight(.regular)
                        .padding()
                        .background(Color.white)
                        .cornerRadius(10)
...
                        .focused($isInputActive)
                        .padding(.horizontal) // Add horizontal padding for consistency
                    
                    Button(action: {
                        nextButton()
                    }) {
                        Text("Next")
                            .foregroundColor(typedWord.isEmpty ? Color.white.opacity(0.5) : .blue)
                            .frame(maxWidth: .infinity)
                            .padding()
                            .background(typedWord.isEmpty ? Color.secondary : Color.white)
                            .cornerRadius(10)
                    }
...
