...
                .frame(maxWidth: .infinity)
            }
            .onAppear {
                if incorrectAnswers.isEmpty {
                    continueText = "Play again"
                } else {
                    continueText = "Continue to Learn words page"
                }
                if RemoteConfigManager.shared.sharingResultsEnabled {
                    imageShareTransferable = imageManager.getTransferable(ResultsViewShare(score: calculateScore(), pass: pass, correctAnswers: correct, questions: spellingTestMetadata.questions.reversed().reversed(), answers: spellingTestMetadata.answers.reversed().reversed(), completionDate: completionDate), scale: displayScale, caption: "My Results")
                }
            }
        }
...
